tests/language_modules/12_type_conflicts/invalid_semantics/record_assignment_mismatch.vf
module RecordAssignmentMismatch

type Account is record
    id: Integer
end record

type User is record
    id: Integer
end record

procedure main()
is
    let account: Account = Account { id: 1 }
    let user: User = User { id: 2 }
    account := user
end main

end RecordAssignmentMismatch